--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
+      href="/favicon.svg"
     />
     <meta
       name="viewport"
